--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,14 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 spring.mvc.static-path-pattern=/static/**
+
+# JavaMailSender 邮件发送的配置
+#邮箱服务器地址
+spring.mail.host=smtp.qq.com
+spring.mail.username=925060392@qq.com
+#邮箱服务器地址
+#邮箱密码
+spring.mail.password=pnmraifsxjttbbbd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
