update：修改配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.mail.host=smtp.qq.com
 spring.mail.username=925060392@qq.com
 #邮箱服务器地址
 #邮箱密码
-spring.mail.password=pnmraifsxjttbbbd
+spring.mail.password=******
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
